--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <div class="hero-section">
         <div class="hero-msg">
-            <p>You are on amazon.com You can also shop on Amazon  India for millions of products with fast local ddelivery. <a> Click here to go to amazon.in </a>
+            <p>You are on amazon.com You can also shop on Amazon  India for millions of products with fast local delivery. <a> Click here to go to amazon.in </a>
             </p>
         </div>
     </div>
